--- a/desktop.css
+++ b/desktop.css
@@ -4,8 +4,9 @@
     --vr-header-snippet-space: 180px;
 
     div.subtitleContainer_f75fb0,
-    main.container__133bf {
-        & > section.container__9293f {
+    main.container__133bf,
+    div.chatLayerWrapper__01ae2 {
+        & section.container__9293f {
             padding-right: var(--vr-header-snippet-space);
         }
     }
@@ -23,12 +24,19 @@
     div.base_c48ade {
         grid-template-rows: [top] 0 [titleBarEnd] min-content [noticeEnd] 1fr [end];
 
-        &:has(div.bar_c38106 > div.trailing_c38106 > *:nth-child(3)) {
+        &:has(div.bar_c38106 > div.trailing_c38106 > .clickable__9293f) {
             & div.subtitleContainer_f75fb0,
-            & main.container__133bf {
-                & > section.container__9293f {
+            & main.container__133bf,
+            & div.chatLayerWrapper__01ae2 {
+                & section.container__9293f {
                     padding-right: calc(var(--vr-header-snippet-space) + 50px);
                 }
+            }
+
+            & div.videoControls_bfe55a .topControls_bfe55a div.toolbar__9293f {
+                margin-right: calc(
+                    var(--vr-header-snippet-space) + 30px
+                ) !important;
             }
         }
 
@@ -51,16 +59,29 @@
             height: var(--custom-channel-header-height);
         }
 
-        &:has(.threadSidebarOpen_f75fb0.threadSidebarFloating_f75fb0) > .bar_c38106 {
+        &:has(.threadSidebarOpen_f75fb0.threadSidebarFloating_f75fb0)
+            > .bar_c38106 {
             z-index: 0;
+        }
+
+        & div.videoControls_bfe55a .topControls_bfe55a {
+            -webkit-app-region: no-drag;
+
+            div.toolbar__9293f {
+                margin-right: var(--vr-header-snippet-space);
+            }
         }
     }
 
-    :not(:has(div.page_c48ade > div.chat_f75fb0)) div.base_c48ade > div.bar_c38106 {
+    :not(:has(div.page_c48ade > div.chat_f75fb0))
+        div.base_c48ade
+        > div.bar_c38106 {
         right: 0 !important;
     }
 
-    ul[data-list-id="guildsnav"] > div.itemsContainer_ef3116 > div.stack_dbd263 {
+    ul[data-list-id="guildsnav"]
+        > div.itemsContainer_ef3116
+        > div.stack_dbd263 {
         margin-top: var(--vr-header-snippet-server-padding);
     }
 
